--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-hook-form": "^7.13.0",
     "react-naver-maps": "0.0.13",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "redux": "^4.1.1",
+    "redux-actions": "^2.6.5",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "sass": "^1.37.2",
     "web-vitals": "^1.1.2"
