--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 REACT_APP_GOOGLE_OAUTH_CLIENT_ID=323793340670-isvcim8icgebo1juvq01iimrqohprd97.apps.googleusercontent.com
-REACT_APP_END_POINT=https://alarm.soundstt.o-r.kr/
+REACT_APP_END_POINT=http://ec2-3-19-120-63.us-east-2.compute.amazonaws.com:8080
+REACT_APP_DEFAULT_THUMBNAIL=https://bookthumb-phinf.pstatic.net/cover/069/862/06986295.jpg?type=m1&udate=20180918
