--- a/package.json
+++ b/package.json
@@ -3,27 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
+    "bootstrap": "^5.1.3",
     "cheerio": "^1.0.0-rc.10",
-    "http-proxy-middleware": "^2.0.1",
+    "http-proxy-middleware": "^2.0.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
-    "react-hook-form": "^7.14.0",
+    "react-hook-form": "^7.25.3",
     "react-naver-maps": "0.0.13",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
-    "redux": "^4.1.1",
+    "react-spinners": "^0.11.0",
+    "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "sass": "^1.37.2",
+    "sass": "^1.49.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
